--- a/index.html
+++ b/index.html
@@ -5,6 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hudební Marketing</title>
     <link rel="stylesheet" href="styles.css"> <!-- Pokud máte oddělený soubor s CSS styly -->
+    <style>
+        body {
+            background-color: #f0f0f0; /* Barva pozadí stránky */
+            font-family: Arial, sans-serif;
+            color: #333; /* Barva textu */
+        }
+        header {
+            background-color: #0077b6; /* Barva hlavičky */
+            color: #fff; /* Barva textu v hlavičce */
+            padding: 20px;
+            text-align: center;
+        }
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        nav ul li {
+            display: inline;
+            margin-right: 20px;
+        }
+        section {
+            padding: 40px;
+        }
+        footer {
+            background-color: #0077b6; /* Barva patičky */
+            color: #fff; /* Barva textu v patičce */
+            text-align: center;
+            padding: 10px;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -46,3 +76,4 @@
     </footer>
 </body>
 </html>
+
